Contract Configurator 0.4.0
- Added WaypointGenerator behaviour.  Allows creation of waypoints.
- Added OrbitGenerator behaviour.  Allows creation of orbits.
- Added ReachSpecificOrbit parameter (for use with OrbitGenerator behaviour).
- Added HasCrew requirement.  Allows filtering on trait, experience level and count.
- Updated HasCrew parameter to support trait and experience level filtering.
- Added VesselMass parameter.
- Added Facility requirement - requires that a player has a facility upgraded to a specified level.
- Added SCANsatCoverage parameter and requirement (big thanks @tattagreis on the SCANsat integration).
- Fixed a bug in the HasPart parameter for parts with an underscore in the name (thanks @tattagreis).
- Improved HasCrew now errors if minCrew > maxCrew (thanks @tattagreis).
- Most requirements are no longer checked on active contracts.  Exposed attribute to override default behaviour through config file (thanks @scerion).
- Added ability to reload all CONTRACT_TYPE nodes on demand (via Alt-F9).
- Various minor bug-fixes.

Contract Configurator 0.3.4
- Fixed incompatibility with Tweakscale.

Contract Configurator 0.3.3
- Persistant data store can now store config nodes.
- Fixed an issue with maxCompletions not working correctly (thanks @tattagreis).

Contract Configurator 0.3.2
- (0.90) Support for KSP 0.90
- (0.90) Fixed VesselHasVisited (note the valid values for situation changed)
- Fixed a bug in the handling of VesselParameterGroup that would cause the countdown timer to reset when switching vessels.

Contract Configurator 0.3.0
- Support for ContractBehaviour - extensible behaviours at the contract level.
- Support for a persistent data store.
- Support for disabling other contract types
- Support for contract level notes.
- Support for using TextGen generated descriptions.
- Added Timer parameter.
- Added Expression requirement.
- Added SpawnKerbal behaviour.
- Added Expression behaviour.