@@ -108,7 +108,6 @@ namespace ContractConfigurator.Behaviour
                         ConfigNodeUtil.ParseCelestialBody(child, "targetBody") : defaultBody).name;
 
                     // Get name
-                    valid &= ConfigNodeUtil.ValidateMandatoryField(child, "name", factory);
                     wpData.waypoint.name = child.GetValue("name");
 
                     // Get icon
@@ -191,6 +190,7 @@ namespace ContractConfigurator.Behaviour
         {
             System.Random random = new System.Random(contract.MissionSeed);
 
+            int i = 0;
             foreach (WaypointData wpData in waypoints)
             {
                 // Do type-specific waypoint handling
@@ -220,6 +220,13 @@ namespace ContractConfigurator.Behaviour
                     {
                         wpData.waypoint.altitude = 0.0;
                     }
+                }
+
+                // Set name
+                if (string.IsNullOrEmpty(wpData.waypoint.name))
+                {
+                    CelestialBody body = FlightGlobals.Bodies.Where<CelestialBody>(b => b.name == wpData.waypoint.celestialName).First();
+                    wpData.waypoint.name = StringUtilities.GenerateSiteName(contract.MissionSeed + i++, body, !wpData.waterAllowed);
                 }
 
                 AddWayPoint(wpData.waypoint);
@@ -294,6 +301,11 @@ namespace ContractConfigurator.Behaviour
             {
                 WaypointManager.AddWaypoint(waypoint);
             }
+        }
+
+        public Waypoint GetWaypoint(int index)
+        {
+            return waypoints[index].waypoint;
         }
     }
 }
