@@ -19,17 +19,33 @@ CONTRACT_TYPE
 
     maxSimultaneous = 1
 
-    // The RecoverKerbal parameter is met when the named Kerbal is "recovered" (ie. goes back
-    // in to the available list at the astronaut complex).  This is from the Squad "rescue"
-    // contracts.
     PARAMETER
     {
-        name = RecoverKerbal1
-        type = RecoverKerbal
+        name = VisitWaypoint1
+        type = VisitWaypoint
 
-        // The Kerbal to be recovered
-        kerbal = Jebediah Kerman
+        // Index of the waypoint in the WaypointGenerator behaviour.
+        // Default = 0
+        index = 0
 
+        // Distance tolerance to be considered at the waypoint.
+        // Default = 500.0 (if on the surface).
+        //         = <waypoint altitude> / 5.0 (if in the air).
+
+        disableOnStateChange = false
+         
+        // Text to use for the parameter
+        // Default = <kerbal>: Recovered
+        //title = 
+    }
+
+    PARAMETER
+    {
+        name = VisitWaypoint2
+        type = VisitWaypoint
+
+        index = 1
+         
         // Text to use for the parameter
         // Default = <kerbal>: Recovered
         //title = 
@@ -103,9 +119,6 @@ CONTRACT_TYPE
         // another waypoint.
         RANDOM_WAYPOINT_NEAR
         {
-            // The name of the waypoint - displayed on the marker
-            name = A waypoint near something
-
             // Body for the waypoint - defaulted from the contract if not
             // supplied.
             targetBody = Kerbin
